<resources>
    <string name="app_name">Calculator</string>
    <string name="title">Welcome to Our App</string>
    <string name="enter">Enter</string>
    <string name="calculator_mobile">Calculator Mobile</string>
    <string name="sum_of_the_numbers">Sum of the Numbers</string>
    <string name="subtraction_of_numbers">Subtraction of Numbers</string>
    <string name="multiplication_of_numbers">Multiplication of Numbers</string>
    <string name="division_of_numbers">Division of Numbers</string>
    <string name="calculator">Calculator</string>
    <string name="trip">Trip</string>
    <string name="calcule">Calcule</string>
    <string name="back">Back</string>
    <string name="enter_the_second_number">Enter the Second Number</string>
    <string name="enter_the_first_number">Enter the First Number</string>
    <string name="Calcule">Calcule</string>
    <string name="Back">Back</string>
    <string name="calculate">Calculate</string>
    <string name="calculete">Calculete</string>
    <string name="Calculate">Calculate</string>
    <string name="third_enter_the_average_kilometers_per_liter">Third, enter the average kilometers per liter</string>
    <string name="second_enter_price_per_liter_of_fuel">Second, enter price per liter of fuel</string>
    <string name="first_enter_the_distance">First, enter the distance</string>
    <string name="calculate_your_trip">Calculate Your Trip</string>
</resources>